--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -205,28 +205,28 @@ jobs:
           name: cypress-output
           path: cypress/cypress
 
-#  deploy-storybook:
-#   runs-on: ubuntu-latest
-#   needs: phpunit
-#   steps:
-#     - name: Checkout 🛎️
-#       uses: actions/checkout@v2
-#       with:
-#         persist-credentials: false
-#     - uses: dorny/paths-filter@v2
-#       id: changes
-#       with:
-#         filters: |
-#           frontend:
-#             - 'frontend/**'
-#     - name: Build and Publish head Docker PHP Composer image
-#       if: steps.changes.outputs.frontend == 'true'
-#     - name: Install and Build 🔧
-#       run: | # Install npm packages and build the Storybook files
-#         npm install
-#         npm run build-storybook
-#     - name: Deploy 🚀
-#       uses: JamesIves/github-pages-deploy-action@4.1.1
-#       with:
-#         branch: main # The branch the action should deploy to.
-#         folder: docs-build # The folder that the build-storybook script generates files.
+  deploy-storybook:
+    runs-on: ubuntu-latest
+    needs: cypress
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          persist-credentials: false
+      - uses: dorny/paths-filter@v2
+        id: changes
+        with:
+          filters: |
+            frontend:
+              - 'frontend/**'
+      - name: Check for changes
+        if: steps.changes.outputs.frontend == 'true'
+      - name: Install and Build
+        run: | # Install npm packages and build the Storybook files
+          cd frontend && npm install
+          npm run build-storybook
+      - name: Deploy
+        uses: JamesIves/github-pages-deploy-action@4.1.1
+        with:
+          branch: gh-pages # The branch the action should deploy to.
+          folder: frontend/storybook-static # The folder that the build-storybook script generates files.
