--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -38,8 +38,9 @@ jobs:
           cd ../frontend
           npm i
           API_TARGET=$URL npm run build
-          sed -i "s%<LAMBDA EXECUTE URL HERE>%$URL%g" serverless.yml
+          ed -i "s%\"<LAMBDA EXECUTE URL HERE>\"%\"$URL\"\n%g" serverless.yml
           cat serverless.yml
+          echo "test output"
           npx serverless
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
