--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -231,6 +231,7 @@ jobs:
   deploy:
     name: deploy
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/master'
     needs: cypress
     steps:
       - uses: actions/checkout@v2
