--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -16,13 +16,16 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "incremental": true
   },
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
-, "next.config.js", "next.config.js"  ],
+    "**/*.tsx",
+    "next.config.js",
+    "next.config.js"
+  ],
   "exclude": [
     "node_modules",
     "stories"
