--- a/backend/composer.json
+++ b/backend/composer.json
@@ -2,27 +2,29 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "keywords": [
+        "framework",
+        "laravel"
+    ],
     "license": "MIT",
     "require": {
-        "php": "^8.0",
-        "bref/bref": "^1.2",
-        "bref/laravel-bridge": "^1.0",
+        "php": "^8.1",
+        "bref/bref": "^1.5",
+        "bref/laravel-bridge": "^1.1",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^7.0.1",
-        "laravel/framework": "^8.12",
-        "laravel/tinker": "^2.5",
-        "tymon/jwt-auth": "dev-develop"
+        "guzzlehttp/guzzle": "^7.4.1",
+        "laravel/framework": "^9.1",
+        "laravel/tinker": "^2.7",
+        "php-open-source-saver/jwt-auth": "^1.4"
     },
     "require-dev": {
-        "facade/ignition": "^2.5",
-        "fakerphp/faker": "^1.9.1",
-        "itsgoingd/clockwork": "^5.0",
-        "laravel/sail": "^1.0.1",
+        "spatie/laravel-ignition": "^1.0",
+        "fakerphp/faker": "^1.19.0",
+        "itsgoingd/clockwork": "^5.1.4",
         "mockery/mockery": "^1.4.2",
-        "nunomaduro/collision": "^5.0",
-        "phpunit/phpunit": "^9.3.3"
+        "nunomaduro/collision": "^6.1",
+        "phpunit/phpunit": "^9.5.13"
     },
     "autoload": {
         "psr-4": {
